--- a/clock.html
+++ b/clock.html
@@ -9,7 +9,7 @@
 	</style>
 </head>
 <body>
-	<canvas id='canvas' width='300' height='300'></canvas>
+	<canvas id='canvas' style='display:none' width='300' height='300'></canvas>
 	<canvas id='canvas2' width='300' height='300'></canvas>
 </body>
 </html>
@@ -53,6 +53,7 @@
 		context.save();
 		context.beginPath();
 		context.rotate(angle*Math.PI/180);
+		context.rotate(-Math.PI/180*90);
 		context.lineWidth = lineWidth;
 		context.moveTo(-10, 0);
 		context.lineTo(-10+length, 0);
@@ -62,14 +63,21 @@
 
 	var canvas2 = document.getElementById('canvas2');
 	var context2 = canvas2.getContext('2d');
-	context2.drawImage(canvas, 0, 0, canvas.width, canvas.height);
-	context2.translate(canvas2.width/2, canvas2.height/2);
+	
 
 	function animate(){
-		
-		drawPointer(context2, 20, 95, 1);
-		drawPointer(context2, 30, 90, 2);
-		drawPointer(context2, 40, 80, 3);
+		context2.clearRect(0, 0, canvas2.width, canvas2.height);
+		context2.drawImage(canvas, 0, 0, canvas.width, canvas.height);
+		context2.translate(canvas2.width/2, canvas2.height/2);
+		var d = new Date();
+		var h = d.getHours();
+		var m = d.getMinutes();
+		var s = d.getSeconds();
+		drawPointer(context2, 360/60*s, 95, 1);
+		drawPointer(context2, 360/60*m, 90, 2);
+		drawPointer(context2, 360/12*h, 80, 3);
+		console.log(d);
+		context2.translate(-canvas2.width/2, -canvas2.height/2);
     	requestAnimationFrame(animate);
 	}
 	requestAnimationFrame(animate);
